--- a/testfiles/config_nopeers.json
+++ b/testfiles/config_nopeers.json
@@ -9,8 +9,8 @@
   "ConfirmsPerFileCreate" : 2,
   "ConfirmsPerFileAppend" : 4,
   "MinerID" : "Mijnwerker",
-  "PeerMinersAddrs" : ["127.0.0.1:5050", "127.0.0.1:6060", "127.0.0.1:7070"],
-  "IncomingMinersAddr" : "127.0.0.1:8080",
+  "PeerMinersAddrs" : [],
+  "IncomingMinersAddr" : "127.0.0.1:5050",
   "OutgoingMinersIP" : "127.0.0.1",
-  "IncomingClientsAddr" : "127.0.0.1:9090"
+  "IncomingClientsAddr" : "127.0.0.1:9091"
 }
