--- a/testfiles/config_good.json
+++ b/testfiles/config_good.json
@@ -10,7 +10,7 @@
   "ConfirmsPerFileAppend" : 4,
   "MinerID" : "Mijnwerker",
   "PeerMinersAddrs" : ["127.0.0.1:5050", "127.0.0.1:6060", "127.0.0.1:7070"],
-  "IncomingMinersAddr" : "127.0.0.1:8080",
+  "IncomingMinersAddr" : "",
   "OutgoingMinersIP" : "127.0.0.1",
   "IncomingClientsAddr" : "127.0.0.1:9090"
 }
